--- a/src/pages/template-app/ui/index.html
+++ b/src/pages/template-app/ui/index.html
@@ -5,7 +5,7 @@
   </div>
   <div class="config">
     <vscode-text-field class="config-item" @change="setConfigItem('dirName',event)"
-      :placeholder="configItems['dirName']">
+      :value="configItems['dirName']">
       <span class="red-star">*&nbsp;</span>应用名称(目录名称)
     </vscode-text-field>
     <vscode-text-field class="config-item" :value="configItems.path" @click="setInitPath()">
@@ -14,10 +14,10 @@
     </vscode-text-field>
     <div v-for="(param, name) in currentAppParams">
       <vscode-text-field class="config-item" v-if="!param.enum" @change="setConfigItem(name, event)"
-        :placeholder="param.default">
+        :value="param.default">
         <span class="red-star" v-if="isRequire(name)">*&nbsp;</span>{{ param.title }}
       </vscode-text-field>
-      <div class=" config-item" v-else>
+      <div class="config-item" v-else>
         <p style="margin: 0;">
           <span class="red-star" v-if="isRequire(name)">*&nbsp;</span>{{ param.title }}
         </p>
