🤖️ fix: 修复排序问题

--- a/src/pages/registry/ui/index.html
+++ b/src/pages/registry/ui/index.html
@@ -40,8 +40,8 @@
           <div class="condition-filter">
             <div class="ranking">
               <vscode-dropdown style="width: 150px;" @change="sortBySelected(event)">
-                <vscode-option id="byDate">按时间排序</vscode-option>
-                <vscode-option id="byDownload">按下载量排序</vscode-option>
+                <vscode-option id="download">按下载量排序</vscode-option>
+                <vscode-option id="time">按时间排序</vscode-option>
               </vscode-dropdown>
             </div>
             <div class="category">
