🤖️ fix: 更新密钥加密方法，以及过宽换行，过高滚动

--- a/src/pages/credential-management/ui/index.html
+++ b/src/pages/credential-management/ui/index.html
@@ -71,10 +71,10 @@
             </div>
             <vscode-divider></vscode-divider>
             <div class="card-body" v-if="statusTable[alias]">
-                <span class="info" v-for="(value, key) in item">{{ key }}:{{ value }}</span>
+                <span class="info" v-for="(value, key) in item">{{ key }}:&nbsp;{{ value }}</span>
             </div>
             <div class="card-body" v-if="!statusTable[alias]">
-                <span class="info" v-for="(value, key) in item">{{ key }}:{{ mark(value) }}</span>
+                <span class="info" v-for="(value, key) in item">{{ key }}:&nbsp;{{ secret(value) }}</span>
             </div>
         </div>
         <div class="card">
